# pycoder-lib

./: .gitignore  PUBLISH.md  PUBLISHING.md  README.md  __init__.py  agents.py  agents_server.py  publish_package.py  pyproject.toml  run_agents_server.py
agents_windserf/: __init__.py  agents.py  agents_server.py  run_agents_server.py
agents_windserf/agents_definitions/: __init__.py
agents_windserf/class_definitions/: results_type_def.py  tool_def.py
agents_windserf/utilities/: agent_handler.py
class_definitions/: __init__.py  model_def.py
run/: run_agents_server.py
src/pycoder/: __init__.py  agents.py  agents_server.py  run_agents_server.py
src/pycoder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pycoder/agents_definitions/: agent_maker.json
src/pycoder/class_definitions/: agents_factory.py
src/pycoder/class_definitions/agents_def/: agent_maker.json
src/pycoder/utilities/: __init__.py  api_handler.py  runtime_handler.py
utilities/: api_handler.py  llm_handler.py
